; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarf2expr.c_read_sleb128.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarf2expr.c_read_sleb128.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [42 x i8] c"read_sleb128: Corrupted DWARF expression.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @read_sleb128(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8, align 1
  %9 = alloca i8, align 1
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  store i8 0, i8* %8, align 1
  br label %10

10:                                               ; preds = %3, %36
  %11 = load i8*, i8** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp uge i8* %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %10
  %15 = call i32 @error(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %10
  %17 = load i8*, i8** %4, align 8
  %18 = getelementptr inbounds i8, i8* %17, i32 1
  store i8* %18, i8** %4, align 8
  %19 = load i8, i8* %17, align 1
  store i8 %19, i8* %9, align 1
  %20 = load i8, i8* %9, align 1
  %21 = zext i8 %20 to i32
  %22 = and i32 %21, 127
  %23 = load i32, i32* %7, align 4
  %24 = shl i32 %22, %23
  %25 = load i8, i8* %8, align 1
  %26 = zext i8 %25 to i32
  %27 = or i32 %26, %24
  %28 = trunc i32 %27 to i8
  store i8 %28, i8* %8, align 1
  %29 = load i32, i32* %7, align 4
  %30 = add i32 %29, 7
  store i32 %30, i32* %7, align 4
  %31 = load i8, i8* %9, align 1
  %32 = zext i8 %31 to i32
  %33 = and i32 %32, 128
  %34 = icmp eq i32 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %16
  br label %37

36:                                               ; preds = %16
  br label %10

37:                                               ; preds = %35
  %38 = load i32, i32* %7, align 4
  %39 = zext i32 %38 to i64
  %40 = icmp ult i64 %39, 8
  br i1 %40, label %41, label %54

41:                                               ; preds = %37
  %42 = load i8, i8* %9, align 1
  %43 = zext i8 %42 to i32
  %44 = and i32 %43, 64
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %46, label %54

46:                                               ; preds = %41
  %47 = load i32, i32* %7, align 4
  %48 = shl i32 1, %47
  %49 = sub nsw i32 0, %48
  %50 = load i8, i8* %8, align 1
  %51 = zext i8 %50 to i32
  %52 = or i32 %51, %49
  %53 = trunc i32 %52 to i8
  store i8 %53, i8* %8, align 1
  br label %54

54:                                               ; preds = %46, %41, %37
  %55 = load i8, i8* %8, align 1
  %56 = load i8*, i8** %6, align 8
  store i8 %55, i8* %56, align 1
  %57 = load i8*, i8** %4, align 8
  ret i8* %57
}

declare dso_local i32 @error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
